added waves file for wave bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.waves {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
 canvas {
   position: fixed;
   top: 0px;
